<?xml version="1.0"?>
<package format="2">
  <name>marine_nav_bt_task_navigator</name>
  <version>0.0.0</version>
  <description>Nav2 behavior tree based navigator that executes navigation tasks</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>marine_nav_behavior_tree</depend>
  <depend>marine_nav_interfaces</depend>
  <depend>marine_nav_tasks</depend>
  <depend>nav2_core</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/navigator_plugin.xml"/>
  </export>
</package>
