<?xml version="1.0"?>
<package format="2">
  <name>marine_nav_ca_safety</name>
  <version>0.0.0</version>
  <description>
    Collision-avoidance safety brake that replaces the nav2 Collision Monitor:
    speed-scaled yaw-preserving slowdown plus reverse-assisted stop, with the
    Collision Monitor's CAMP zone visualization. Platform-agnostic (generic
    topic/frame names).
  </description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>marine_control</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>marine_control_interfaces</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs_py</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
