<?xml version="1.0"?>
<package format="2">
  <name>marine_nav_crabbing_path_follower</name>
  <version>0.0.0</version>
  <description>Nav2 controller for marine robots that compensates for external forces such as wind and currents by crabbing.</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>marine_nav_utilities</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
